# good-morning

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  .env.prod.example  .gitignore  Dockerfile  dev.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/scripts/: add_music_pieces.py  build-and-push.sh  deploy-to-server.sh  generate_audio_assets.py  init_music.py  sync-music-to-server.sh
backend/src/: __init__.py  config.py  main.py  scheduler.py  version.py
backend/src/agents/: __init__.py  content.py  orchestrator.py  script.py
backend/src/api/: admin.py  auth_routes.py  routes.py  schemas.py  template_config.py  templates.py  website.py
backend/src/api/admin/: __init__.py  health.py  invites.py  music.py  previews.py  scheduler.py  users.py
backend/src/api/routes/: __init__.py  briefings.py  music.py  schedule.py  settings.py  (+1 more)
backend/src/audio/: mixer.py  tts.py
backend/src/auth/: __init__.py  apple.py  jwt.py  middleware.py
backend/src/briefing/: __init__.py  content.py  generation_errors.py  length_rules.py  orchestrator.py  script.py
backend/src/prompts/: __init__.py
backend/src/storage/: database.py  minio_storage.py
backend/src/templates/: base.html
backend/src/tools/: __init__.py  deep_dive_agent.py  finance_tools.py  fun_tools.py  music_tools.py  news_tools.py  sports_tools.py  weather_tools.py
backend/src/utils/: __init__.py  timezone.py
backend/static/css/: styles.css
backend/tests/: __init__.py  test_api.py  test_audio.py  test_orchestrator.py  test_tools.py
(+87 files in other folders)
